syntax = "proto3";

import "google/protobuf/wrappers.proto";

package juice.multiTenant.grpc;

service TenantStore {
  rpc TryAdd(TenantInfo) returns (TenantOperationResult);
  rpc TryUpdate(TenantInfo) returns (TenantOperationResult);
  rpc TryRemove(TenantIdenfier) returns (TenantOperationResult);
  rpc TryGetByIdentifier(TenantIdenfier) returns (TenantInfo);
  rpc TryGet(TenantIdenfier) returns (TenantInfo);
  rpc GetAll(TenantQuery) returns (TenantQueryResult);
}

message TenantIdenfier{
    string identifier = 1;
    string id = 2;
}

message TenantQueryResult{
    repeated TenantInfo tenants = 1;
}

message TenantQuery{}

message TenantInfo
{
    string id = 1;
    string identifier = 2;
    string name = 3;
    google.protobuf.StringValue connectionString = 4;
    string serializedProperties = 5;
    bool disabled = 6;
}

message TenantOperationResult{
    bool succeeded = 1;
    google.protobuf.StringValue message = 2;
}