syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Juice.MultiTenant.Settings.Grpc";

service TenantSettingsStore {
  rpc GetAll(TenantSettingQuery) returns (TenantSettingsResult);
  rpc UpdateSection(UpdateSectionParams) returns(UpdateSectionResult);
  rpc DeleteSection(UpdateSectionParams) returns(UpdateSectionResult);
}

message TenantSettingQuery{}

message TenantSettingsResult{
    bool succeeded = 1;
    google.protobuf.StringValue message = 2;
    map<string, string> settings = 3;
}

message UpdateSectionParams{
    string section = 1;
    map<string, string> settings = 2;
}

message UpdateSectionResult{
    bool succeeded = 1;
    google.protobuf.StringValue message = 2;
}